<resources>
    <string name="app_name">PoGo管理器【老K刷機工場】</string>
    <string name="app_name_short">PoGo管理器</string>
    <string name="pokemon">寶可夢</string>
    <string name="pokemonAppList">寶可夢App列表</string>
    <string name="mh_now">魔物獵人</string>
    <string name="mh_nowAppList">魔物獵人App列表</string>
    <string name="ok">確定</string>
    <string name="copy">複製</string>
    <string name="error">錯誤</string>
    <string name="cancel">取消</string>
    <string name="home">首頁</string>
    <string name="about">關於</string>
    <string name="share">分享</string>
    <string name="copied">已複製</string>
    <string name="shortcuts">捷徑</string>
    <string name="contact">聯絡我</string>
    <string name="manual">使用手冊</string>
    <string name="remove">移除</string>
    <string name="refreshing">獲取資料中…</string>
    <string name="setting">設定</string>
    <string name="download">下載</string>
    <string name="downloadAgain">重新下載</string>
    <string name="downloadProblem">無法正常下載</string>
    <string name="update">更新</string>
    <string name="updateContent">更新內容:</string>
    <string name="checkUpdate">檢查更新</string>
    <string name="unlockPremium">解鎖付費版本</string>
    <string name="location">定位</string>
    <string name="locationError">無法偵測目前位置</string>
    <string name="notChecked">未檢查</string>
    <string name="nearbySharing">快速分享(鄰近分享)</string>
    <string name="networkError">網路可能異常，請稍後再試</string>
    <string name="shareManager">分享管理器</string>
    <string name="cancelOperation">取消操作</string>
    <string name="thanksForWaiting">感謝您的耐心等候：）</string>
    <string name="versionTooHigh">(版本過高)</string>
    <string name="testVersion">測試版</string>
    <string name="getPolygonKey">暴力功key(實驗性)</string>
    <string name="requestPermission">請允許定位權限後再重試</string>
    <string name="somethingWrong">發生一些錯誤</string>
    <string name="more_options">其他選項</string>
    <string name="noUpdate">詳情</string>
    <string name="picture">圖片</string>
    <string name="doNotShowAgain">不再顯示</string>
    <string name="developerModeIsOff">開發者選項未開啟</string>
    <string name="isNotMIUI">非MIUI系統</string>
    <string name="appsAllUpdated">全部APP皆已最新版本</string>
    <string name="apps_ARMV8a">64位元</string>
    <string name="apps_ARMV7a">32位元</string>
    <string name="installed">已安裝</string>
    <string name="notInstalled">未安裝</string>
    <string name="widget_description">定位精確度 開關捷徑</string>
    <string name="share_information">我發現了 PoGo 外掛管理器，快來下載使用！</string>
    <string name="rom_releaseKey">系統簽名正常</string>
    <string name="rom_testKey">系統使用測試金鑰簽名</string>
    <string name="rom_unknown">系統簽名異常</string>
    <string name="unsupported">不支援</string>
    <string name="unsupportedDevices">不支援的設備</string>
    <string name="unsupportedDevicesPokeAres">已禁止在非三星裝置下載三星版本寶可夢\n若仍要下載，請至設定中開啟「允許下載三星版本寶可夢」選項</string>
    <string name="checkTitle_DetectLocationStatus">系統取得定位位置:</string>
    <string name="checkTitle_deviceIsRoot">偵測ROOT環境:</string>
    <string name="check_button">檢測定位與設備</string>
    <string name="check_devicesAPI">檢測設備完整性</string>
    <string name="check_appList">設備環境測試</string>
    <string name="checkInfo_rootDetected">⚠️已發現root路徑</string>
    <string name="checkInfo_rootNotDetected">✅未發現root</string>
    <string name="shortcutsTitle">長按可新增捷徑</string>
    <string name="shortcutsTitle_docAndTool">工具與捷徑</string>
    <string name="shortcutsTitle_poke">寶可夢相關捷徑</string>
    <string name="shortcutsTitle_mhn">魔物獵人相關捷徑</string>
    <string name="shortcutsTitle_download">其他檔案下載</string>
    <string name="shortcuts_MiuiXSpace">MIUI/Hyper OS應用雙開</string>
    <string name="shortcuts_locationSettings">定位設定</string>
    <string name="shortcuts_developerMode">開發者選項</string>
    <string name="shortcuts_accountSettings">登入帳號設定</string>
    <string name="shortcuts_coolDownCalculator">位置冷卻計算機</string>
    <string name="shortcuts_PGToolsFile">PGTools設定檔(贊助版本)</string>
    <string name="shortcuts_PGToolsRaids">PGTools雷達</string>
    <string name="shortcuts_island">island 創建雙開環境</string>
    <string name="shortcuts_pokeMod">下載PokeMod</string>
    <string name="shortcuts_gpx1">全球AI整合GPX路徑檔</string>
    <string name="shortcuts_pokeInfo">報寶貝 雷達</string>
    <string name="shortcuts_pokeInfoMessage">報寶貝若顯示黑影 請重新整理網頁30次後即會恢復正常</string>
    <string name="shortcuts_pokeListWeb">PokeList雷達</string>
    <string name="InjectionToolsDownloadWarning">輔助軟體下載 使用可能有風險</string>
    <string name="downloadOnGooglePlay">從play商店下載</string>
    <string name="downloadAPK">下載APK檔</string>
    <string name="locationAccuracyActivity1">定位精確度</string>
    <string name="locationAccuracyActivity2">開關捷徑</string>
    <string name="format_installApps">發現 %1$d 個APP可更新</string>
    <string name="format_newerVersion">支援版本: %1$s</string>
    <string name="format_newerVersion_other">支援版本: %1$s %2$s</string>
    <string name="format_installVersion">安裝版本: %1$s</string>
    <string name="format_installVersion_other">安裝版本: %1$s %2$s</string>
    <string name="format_newerVersion_Gps32">支援版本: 已修改無廣告版本</string>
    <string name="format_newerVersion_Gps64">支援版本: 已修改無廣告版本(64位元)</string>
    <string name="dialogDownloadTitle">即將開始下載</string>
    <string name="dialogDownloadMessage">請在網頁點擊【Download】／【Download APK】或【下載】按鈕以下載 APK</string>
    <string name="dialogDownloadDetectorMessage">您尚未安裝測試 App，即將下載測試 App，是否要下載</string>
    <string name="dialogVersionTooHighTitle">偵測到版本過高</string>
    <string name="dialogVersionTooHighMessage">請嘗試降版本或使用測試版本自動抓</string>
    <string name="dialogUpdateAvailableTitle">偵測到有新版本</string>
    <string name="dialogUpdateAvailableManagerMessage">建議更新至最新版本以取得最佳體驗，是否要更新管理器？</string>
    <string name="dialogUpdateAvailablePokMessage">建議更新至最新版本以取得最佳體驗，請手動點擊【更新】按鈕更新 App</string>
    <string name="dialogUpdateDetectedVersion">偵測到新版本 %1$s -&gt; %2$s</string>
    <string name="dialogIsLatestVersion">已經是最新版本</string>
    <string name="dialogAboutInfo">免責聲明：\n本應用程式所提供的相關檔案皆從網路公開資源搜尋取得，檔案版權不歸本項目所有。\n\nPokémon GO、Monster Hunter NOW 及其相關商標為各自版權所有者之財產，與本項目無任何隸屬或授權關係。\n\n本應用僅作為檔案管理工具使用，使用者須自行承擔使用風險。</string>
    <string name="dialogAboutMaker">軟體作者:lokey0905 \n圖示作者:梧銳#4486</string>
    <string name="dialogAdNotReadyTitle">發生一些錯誤</string>
    <string name="dialogAdNotReadyMessage">操作過快或網路不穩，請 5 秒後再試</string>
    <string name="dialogCheckLocationAccuracyTitle">偵測到精確定位設定</string>
    <string name="dialogCheckLocationAccuracyMessage">偵測到精確定位已開啟，建議前往關閉以避免模擬定位跳轉，是否前往關閉？\n\n若已關閉定位精確度可忽略此訊息</string>
    <string name="dialogDownloadOfficialMessage">請選擇下載方式：在 Play 商店下載或直接下載 APK</string>
    <string name="dialogInstallSamsungStoreTitle">尚未安裝三星應用商店</string>
    <string name="dialogInstallSamsungStoreMessage">檢測到設備尚未安裝三星應用商店，若無安裝可能導致部分功能無法正常運作，是否前往下載安裝?</string>
    <string name="androidDevices">裝置名稱:</string>
    <string name="androidVersion">系統版本:</string>
    <string name="androidAbi">系統架構:</string>
    <string name="androidRamSize">記憶體大小:</string>
    <string name="androidARM64Supper">軟體支援:</string>
    <string name="androidARM64SupperTrue">✅完整支援Pokemod&amp;PGTools\n✅完整支援魔物獵人</string>
    <string name="androidARM64SupperFalse">❌不支援Pokemod&amp;PGTools\n❌不支援魔物獵人</string>
    <string name="appsMHNPage_supportVersion_MHNTools">MHNTools支援版本: </string>
    <string name="appsMHNPage_MHNTitle">原版魔物獵人客戶端</string>
    <string name="appsMHNPage_MHNAPPName">MH Now【魔物獵人】</string>
    <string name="appsMHNPage_MHNToolsTitle">魔物獵人修改工具</string>
    <string name="appsMHNPage_MHNToolsAPPName">MHN Tools</string>
    <string name="appsMHNPage_hylianerTitle">魔物獵人修改工具</string>
    <string name="appsMHNPage_hylianerAPPName">hylianer</string>
    <string name="appsMHNPage_GpsTitle">可修改手機定位</string>
    <string name="appsMHNPage_GpsAPPName">GPS JoyStick【搖桿改定位✅老K刷機】</string>
    <string name="popup_menu_startApp">啟動APP</string>
    <string name="popup_menu_officialLink">官方網站</string>
    <string name="popup_menu_setting">管理</string>
    <string name="appsPokePage_supportVersion">支援版本</string>
    <string name="appsPokePage_supportVersion_textfield">選擇下載版本</string>
    <string name="appsPokePage_supportVersion_pokemon">Pokémon GO 版本: </string>
    <string name="appsPokePage_supportVersion_pokemon_min">Pokémon 最低版本: </string>
    <string name="appsPokePage_supportVersion_polygon">Polygon 支援版本: </string>
    <string name="appsPokePage_supportVersion_PGTools">PGTools 支援版本: </string>
    <string name="appsPokePage_supportVersion_Pokemod">Pokemod 支援版本: </string>
    <string name="appsPokePage_PGToolsTestVersion">PGTools測試版</string>
    <string name="appsPokePage_PokeTitle">原版寶可夢客戶端</string>
    <string name="appsPokePage_PokeAppName">Pokémon GO【寶可夢】</string>
    <string name="appsPokePage_PokeAreaTitle">原版寶可夢客戶端三星版本</string>
    <string name="appsPokePage_PokeAreaAppName">Pokémon GO【寶可夢三星雙開版本】</string>
    <string name="appsPokePage_GpsTitle">可修改手機定位</string>
    <string name="appsPokePage_GpsAppName">GPS JoyStick【搖桿改定位✅老K刷機】</string>
    <string name="appsPokePage_wrapperTitle">快速尋找火箭隊</string>
    <string name="appsPokePage_wrapperAppName">Data Hub</string>
    <string name="preferences_downloadSettings_Title">下載設定</string>
    <string name="preferences_locationSettings_Title">位置設定</string>
    <string name="preferences_pokeSettings_Title">Pokémon GO【寶可夢】相關設定</string>
    <string name="preferences_mhnSettings_Title">MH Now【魔物獵人】相關設定</string>
    <string name="preferences_customTabsOff_Title">在瀏覽器中開啟網頁</string>
    <string name="preferences_customTabsOff_Summary">使用預設瀏覽器開啟網頁, 若無法正常下載檔案可嘗試開啟\n此設定僅適用捷徑頁面</string>
    <string name="preferences_allow_download_on_non_arm64_Title">允許在非支援裝置下載軟體</string>
    <string name="preferences_allow_download_on_non_arm64_Summary">部分功能可能無法正常運作</string>
    <string name="preferences_location_accuracy_Title">定位精確度捷徑</string>
    <string name="preferences_location_accuracy_Summary">如需使用虛擬定位, 須關閉定位精確度, 若需使用實體定位可開啟, 點擊此處前往設定</string>
    <string name="preferences_location_check_A12_Title">新方式檢測虛擬定位</string>
    <string name="preferences_location_check_A12_Summary">使用Android 12新版API檢測定位</string>
    <string name="preferences_location_accuracy_check_Title">不再偵測定位精確度</string>
    <string name="preferences_location_accuracy_check_Summary">開啟APP時, 不再偵測與顯示通知</string>
    <string name="preferences_disable_auto_update_pok_Title">關閉Play 商店自動更新</string>
    <string name="preferences_disable_auto_update_pok_Summary">點擊此處前往關閉</string>
    <string name="preferences_pok_download_on_apkmirror_Title">從APKMirror下載寶可夢</string>
    <string name="preferences_pok_download_on_apkmirror_Summary">使用ApkMirror連結下載寶可夢, 而不是使用pgtools連結</string>
    <string name="preferences_allow_download_on_non_samsung_Title">允許下載三星版本寶可夢</string>
    <string name="preferences_allow_download_on_non_samsung_Summary">允許用戶在非三星(Samsung)裝置上下載三星版本寶可夢</string>
    <string name="preferences_pgtools_testversion_Title">使用pgtools測試版本連結</string>
    <string name="preferences_pgtools_testversion_Summary">使用pgtools測試版本連結, 可能導致使用不穩定</string>
    <string name="preferences_disable_auto_update_mhn_Title">關閉Play 商店自動更新</string>
    <string name="preferences_disable_auto_update_mhn_Summary">點擊此處前往關閉</string>
    <string name="preferences_mhntools_testversion_Title">使用mhntools測試版本</string>
    <string name="preferences_mhntools_testversion_Summary">使用mhntools測試版本連結, 可能導致使用不穩定</string>
    <string name="preferences_mhn_download_on_apkmirror_Title">從APKMirror下載魔物獵人</string>
    <string name="preferences_mhn_download_on_apkmirror_Summary">使用ApkMirror連結下載魔物獵人, 而不是使用mhntools連結</string>
    <string name="preferences_about_shopee_title">Shopee 賣場</string>
    <string name="preferences_about_shopee_summary">歡迎購買賣場內刷機手機，也可協助代刷機</string>
    <string name="preferences_about_facebook_title">Facebook 粉絲專頁</string>
    <string name="preferences_about_facebook_summary">方便的話，歡迎幫我按個讚</string>
    <string name="preferences_about_discord_title">Discord 討論社群</string>
    <string name="preferences_about_discord_summary">歡迎加入一起討論各式問題</string>
    <string name="preferences_about_github_title">GitHub 開源程式碼</string>
    <string name="preferences_about_app_title">App 版本</string>
</resources>