<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_poke"
        android:title="@string/pokemon"
        android:icon="@drawable/ic_baseline_catching_pokemon_24" />

    <item android:id="@+id/nav_mhn"
        android:title="@string/mh_now"
        android:icon="@drawable/baseline_mosque_24" />

    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_house_24" />

    <item android:id="@+id/nav_shortcuts"
        android:title="@string/shortcuts"
        android:icon="@drawable/baseline_app_shortcut_24" />

    <item android:id="@+id/nav_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24" />
</menu>