<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.lokey0905.location.MainActivity">

    <item android:id="@+id/action_download"
        android:title="@string/update"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_PokeList"
        android:orderInCategory="100"
        android:title="下載PokeList"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_wecatch"
        android:orderInCategory="100"
        android:title="下載wecatch"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>