<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Home">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.SubtitleCollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:subtitle="@string/app_name"
            app:title="@string/app_name_short"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.SubtitleCollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="MissingPrefix">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:padding="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/androidDevices"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <TextView
                            android:id="@+id/android_devices"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:textAppearance="?attr/textAppearanceBodyMedium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/androidVersion"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <TextView
                            android:id="@+id/android_version"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:textAppearance="?attr/textAppearanceBodyMedium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/androidAbi"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <TextView
                            android:id="@+id/android_abi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:textAppearance="?attr/textAppearanceBodyMedium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/androidRamSize"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <TextView
                            android:id="@+id/android_ramSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:textAppearance="?attr/textAppearanceBodyMedium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/androidARM64Supper"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <TextView
                            android:id="@+id/android_pgtoolsSupper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBodyMedium" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <Button
                            android:id="@+id/check_location"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@string/check_button" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/check_information"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/checkTitle_DetectLocationStatus"
                                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                                <TextView
                                    android:id="@+id/location_system"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="16dp"
                                    android:text="@string/notChecked"
                                    android:textAppearance="?attr/textAppearanceBodyMedium" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/checkTitle_deviceIsRoot"
                                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                                <TextView
                                    android:id="@+id/check_root"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="16dp"
                                    android:text="@string/notChecked"
                                    android:textAppearance="?attr/textAppearanceBodyMedium" />
                            </LinearLayout>

                            <Button
                                android:id="@+id/check_safetynet"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/check_devicesAPI" />

                            <Button
                                android:id="@+id/check_appList"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_appList" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </GridLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>